Add fonts e codigo css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenvolvimento em Javascript</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+    <style type="text/css">
+        *{
+            margin:0;
+            padding:0;
+        }
+        body{
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #fcfcfc;
+            font-family: 'Roboto', sans-serif;
+        }
+        p{
+            padding:2%; 
+        }
+        .form{
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            border: black solid 10px;
+            padding: 2em;
+            font-size:16px; 
+            border-width:2px; 
+            border-color:#cccccc; 
+            border-style:solid; 
+            padding:2%; 
+            border-radius:9px; 
+            box-shadow: 3px 3px 3px 0px rgba(42,42,42,.58); 
+        }
+        button{
+            background-color: #2f9226;
+            width: 100%;
+            color: #fff;
+            font-family: 'Roboto', sans-serif;
+            font-size:16px; 
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            border-color:#cccccc; 
+            border: none;
+            padding:6px; 
+            border-radius:9px; 
+            box-shadow: 3px 3px 3px 0px rgba(42,42,42,.58); 
+        }
+        input{
+            font-family: 'Roboto', sans-serif;
+            width: 96%;
+            margin-bottom: 10%;
+            font-size:16px; 
+            border-width:2px; 
+            border-color:#cccccc; 
+            border-style:solid; 
+            padding:6px; 
+            border-radius:9px;
+            box-shadow: 3px 3px 3px 0px rgba(42,42,42,.58); 
+        }
+        form{
+            width: 100%;
+        }
+        footer{
+            bottom: 2%;
+            position: absolute;
+        }
+
+    </style>
+
 </head>
 <body>
     <div class="form">
