Add placeholder no input

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="form">
         <p>Digite o email no campo abaixo :</p>
         <form action="" method="post">
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email" placeholder="exemplo@dominio.com">
             <button type="submit">Enviar</button>
         </form>
     </div>
