--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+    <script>
+        function validarEmail(email) {
+            var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+            return re.test(String(email).toLowerCase());
+        }
+    </script>
 </body>
 <footer >Desenvolvido por JV Bicalho. 2023.</footer>
 </html>
