--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             return re.test(String(email).toLowerCase());
         }
         var formulario = document.querySelector('form');
+        formulario.addEventListener('submit', function(e) {
+            e.preventDefault();
+        });
     </script>
 </body>
 <footer >Desenvolvido por JV Bicalho. 2023.</footer>
