--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         var formulario = document.querySelector('form');
         formulario.addEventListener('submit', function(e) {
             e.preventDefault();
+            var email = document.querySelector('input[name="email"]').value;
         });
     </script>
 </body>
